# Blaster

./: AGENTS.md  CMakeLists.txt  LICENCE  LICENSE.md
Assets/Blaster/Model/: Crate.fbx  Crate_data.cld1  MTF2.blend  MTF2.blend1  MTF2.fbx  MTF2.ms3d  MTF2_Blue.blend  MTF2_Blue.fbx  MTF2_Red.blend  MTF2_Red.blend1  MTF2_Red.fbx  Map.fbx  Map_data.cld1  NewPlayer.blend  NewPlayer.blend1  NewPlayer.fbx  OtherPlayer.fbx  Platform.fbx  Platform_data.cld1  Player.fbx  Player_data.cld1  Test.fbx
Assets/Blaster/Shader/: ColoredUIFragment.glsl  ColoredUIVertex.glsl  ModelFragment.glsl  ModelVertex.glsl  TextUIFragment.glsl  TextUIVertex.glsl  TexturedUIFragment.glsl
Blaster/Header/Client/: ClientApplication.hpp
Blaster/Header/Client/Core/: InputManager.hpp  Window.hpp
Blaster/Header/Client/Network/: ClientNetwork.hpp  ClientRpc.hpp  ClientSynchronization.hpp  TranslationBuffer.hpp
Blaster/Header/Client/Render/: Animator.hpp  Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderManager.hpp  Skeleton.hpp  Texture.hpp  TextureFuture.hpp  TextureManager.hpp  Vertex.hpp
Blaster/Header/Client/Render/Vertices/: FatVertex.hpp  ModelVertex.hpp  UIVertex.hpp
Blaster/Header/Client/Thread/: MainThreadExecutor.hpp
Blaster/Header/Client/UI/: UIElement.hpp  UILayout.hpp  UIObject.hpp
Blaster/Header/Client/UI/Elements/: UIElementButton.hpp  UIElementImage.hpp  UIElementText.hpp
Blaster/Header/Independent/: ComponentInclusions.hpp  ComponentRegistry.hpp  TypeRegistrations.hpp
Blaster/Header/Independent/Collider/: ColliderBase.hpp  PhysicsWorld.hpp
Blaster/Header/Independent/Collider/Colliders/: ColliderBox.hpp  ColliderCapsule.hpp  ColliderMesh.hpp
Blaster/Header/Independent/ECS/: Component.hpp  ComponentFactory.hpp  GameObject.hpp  GameObjectManager.hpp  IGameObjectSynchronization.hpp  MergeSupport.hpp
Blaster/Header/Independent/ECS/Synchronization/: CommonSynchronization.hpp  ReceiverSynchronization.hpp  SenderSynchronization.hpp  SyncTracker.hpp  TranslationBuffer.hpp
Blaster/Header/Independent/Math/: Arithmetic.hpp  Matrix.hpp  Rect.hpp  Rigidbody.hpp  Transform.hpp  Transform2d.hpp  Transform3d.hpp  Vector.hpp
Blaster/Header/Independent/Network/: CommonNetwork.hpp  CommonRpc.hpp  CommonSynchronization.hpp  NetworkSerialize.hpp
Blaster/Header/Independent/Physics/: CharacterController.hpp  Collider.hpp  PhysicsBody.hpp  PhysicsCommands.hpp  PhysicsSystem.hpp  PhysicsWorld.hpp  Rigidbody.hpp  RigidbodyCommands.hpp
Blaster/Header/Independent/Physics/Colliders/: ColliderBox.hpp  ColliderCapsule.hpp  ColliderMesh.hpp
Blaster/Header/Independent/Test/: PhysicsDebugger.hpp  StressTest.hpp
Blaster/Header/Independent/Thread/: MainThreadExecutor.hpp
Blaster/Header/Independent/Utility/: AssetPath.hpp  Builder.hpp  Demangler.hpp  FileHelper.hpp  SingletonManager.hpp  Time.hpp  TypeRegistrar.hpp
Blaster/Header/Server/: ServerApplication.hpp
Blaster/Header/Server/Entity/: EntityBase.hpp
Blaster/Header/Server/Entity/Entities/: EntityPlayer.hpp
Blaster/Header/Server/Network/: RpcServer.hpp  ServerNetwork.hpp  ServerRpc.hpp  ServerSynchronization.hpp
Blaster/Source/Client/: ClientApplication.cpp
Blaster/Source/Server/: ServerApplication.cpp  glad.cpp
